added OPTICS nb and update

--- a/DFT_Analysis.ipynb
+++ b/DFT_Analysis.ipynb
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
        " 'file': 'Input_Vasil/qe_scf.in'}"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -675,7 +675,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -688,27 +688,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nbnds = 35\n",
+    "nbnds = 500 #35\n",
     "inp.set_nscf(nbnds,force_symmorphic=True,conv_thr=1e-6)\n",
     "#inp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kvalues = [10,20]"
+    "kvalues = [10] #[10,15,20,25,30]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -732,31 +732,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'label': 'Dataset',\n",
+       " 'run_dir': 'DFT_analysis',\n",
+       " 'num_tasks': 2,\n",
+       " 'verbose': True,\n",
+       " 'input': {'control': {'calculation': \"'nscf'\",\n",
+       "   'verbosity': \"'high'\",\n",
+       "   'prefix': \"'kpoints_10x20-nbnds_500'\",\n",
+       "   'outdir': \"'./'\",\n",
+       "   'restart_mode': \"'from_scratch'\",\n",
+       "   'wf_collect': '.false.',\n",
+       "   'pseudo_dir': \"'../pseudos'\"},\n",
+       "  'system': {'force_symmorphic': '.true.',\n",
+       "   'ibrav': 0,\n",
+       "   'nat': 14,\n",
+       "   'ntyp': 2,\n",
+       "   'ecutwfc': 70,\n",
+       "   'nbnd': 500,\n",
+       "   'occupations': \"'fixed'\",\n",
+       "   'degauss': 0.0,\n",
+       "   'smearing': \"'gaussian'\"},\n",
+       "  'electrons': {'diago_full_acc': '.false.', 'conv_thr': 1e-06},\n",
+       "  'ions': {},\n",
+       "  'cell': {},\n",
+       "  'atomic_species': {'C': [12.011, 'C_ONCV_PBE.upf'],\n",
+       "   'H': [1.0, 'H_ONCV_PBE.upf']},\n",
+       "  'atomic_positions': {'type': '(angstrom)',\n",
+       "   'values': [['C', [-1.792510823, 1.4456517994, -0.0414672295]],\n",
+       "    ['C', [0.6379373039, 1.4235971792, -0.3172245562]],\n",
+       "    ['C', [3.0657768079, 1.4455042995, -0.0157591793]],\n",
+       "    ['C', [-0.5959562906, 0.7133098684, -0.2503074405]],\n",
+       "    ['C', [1.8700368141, 0.7135148531, -0.2270262819]],\n",
+       "    ['C', [-3.0402753064, -0.7719313527, 0.4823609916]],\n",
+       "    ['H', [-3.0239104491, -1.0594331893, 1.5579425823]],\n",
+       "    ['C', [-0.5959562909, -0.7133098686, -0.2503074405]],\n",
+       "    ['C', [1.8700368138, -0.7135148525, -0.2270262819]],\n",
+       "    ['C', [-1.7925108232, -1.4456518, -0.0414672295]],\n",
+       "    ['C', [0.6379373034, -1.423597179, -0.3172245562]],\n",
+       "    ['C', [3.0657768077, -1.4455042985, -0.0157591793]],\n",
+       "    ['C', [-3.040275306, 0.7719313517, 0.4823609916]],\n",
+       "    ['H', [-3.0239104484, 1.0594331883, 1.5579425823]]]},\n",
+       "  'kpoints': {'type': 'automatic', 'values': ([10, 20, 1], [0.0, 0.0, 0.0])},\n",
+       "  'cell_parameters': {'type': 'angstrom',\n",
+       "   'values': [[7.363588492, 1e-06, 0.0],\n",
+       "    [1e-09, 4.272655813, 0.0],\n",
+       "    [0.0, 0.0, 12.0]]},\n",
+       "  'file': 'Input_Vasil/qe_scf.in'},\n",
+       " 'source_dir': 'DFT_analysis/gs_converged.save',\n",
+       " 'name': 'kpoints_10x20-nbnds_500'}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#study.runs[0]"
+    "study.runs[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Run the selection [0, 1] with the parallel task_groups [[0, 1]] \n",
+      "Run the selection [0] with the parallel task_groups [[0]] \n",
       "\n",
-      "Run the task [0, 1] \n",
-      "Skip the run of kpoints_10x20-nbnds_35\n",
-      "The folder /work/dalessandro/Xenes/AGSL5/DFT_analysis/kpoints_10x20-nbnds_35.save already exists. Source_dir DFT_analysis/gs_converged.save not copiedSkip the run of\n",
-      " kpoints_20x40-nbnds_35\n",
-      "The folder /work/dalessandro/Xenes/AGSL5/DFT_analysis/kpoints_20x40-nbnds_35.save already exists. Source_dir DFT_analysis/gs_converged.save not copied\n",
-      "Task [0, 1] ended \n",
-      " \n"
+      "Run the task [0] \n",
+      "copy source_dir DFT_analysis/gs_converged.save in the /work/dalessandro/Xenes/AGSL5/DFT_analysis/kpoints_10x20-nbnds_500.save\n",
+      "run command: mpirun -np 16 pw.x -inp kpoints_10x20-nbnds_500.in > kpoints_10x20-nbnds_500.log\n",
+      "slurm submit:  cd DFT_analysis ; sbatch job_kpoints_10x20-nbnds_500.sh\n",
+      "computation kpoints_10x20-nbnds_500 is running...\n"
      ]
     }
    ],
@@ -809,9 +865,7 @@
     }
    ],
    "source": [
-    "#BZ = [K, Kp, Mp]\n",
     "print('number of kpoints = %s'%len(kp))\n",
-    "#plt.plot(*np.column_stack(BZ),color='black')\n",
     "IBZ = [G,M2,K,M,G]\n",
     "plt.plot(*np.column_stack(IBZ),color='red')\n",
     "plt.scatter(kp[:,0],kp[:,1],c='blue')"
