--- a/GW_Analysis.ipynb
+++ b/GW_Analysis.ipynb
@@ -863,7 +863,7 @@
     "We observe that the choice NGsBlkXp = 8 Ha could provide convergence of the screening at the level of few meV,\n",
     "also in view of a possible hidden slower convergence rate due to the correlation between this value and the number of bands.\n",
     "\n",
-    "In case the computational local should be to heavy it is possible to reduce this parameter to NGsBlkXp = r Ha. Indeed it worth nothing that \n",
+    "In case the computational load should be to heavy it is possible to reduce this parameter to NGsBlkXp = r Ha. Indeed it worth nothing that \n",
     "for this system the direct gap is of the order of the hundreds of eV, so a computational convergence at the level of some tenth of eV\n",
     "should be acceptable."
    ]
