modified the structure to manage various n

--- a/n_5/DFT_Analysis.ipynb
+++ b/n_5/DFT_Analysis.ipynb
@@ -32,9 +32,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialize a QuantumESPRESSO calculator with scheduler slurm\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'scheduler': 'slurm',\n",
+       " 'nodes': 1,\n",
+       " 'ntasks_per_node': 16,\n",
+       " 'cpus_per_task': 2,\n",
+       " 'omp_num_threads': 2,\n",
+       " 'gpus_per_node': None,\n",
+       " 'gres_gpu': None,\n",
+       " 'memory': '125000',\n",
+       " 'time': '11:59:00',\n",
+       " 'partition': 'all12h',\n",
+       " 'account': None,\n",
+       " 'qos': None,\n",
+       " 'omp_places': None,\n",
+       " 'omp_proc_bind': None,\n",
+       " 'map_by': None,\n",
+       " 'pe': 1,\n",
+       " 'rank_by': None,\n",
+       " 'pre_processing': '/home/dalessandro/module_script/qe_module',\n",
+       " 'executable': 'pw.x',\n",
+       " 'skip': True,\n",
+       " 'clean_restart': True,\n",
+       " 'dry_run': False,\n",
+       " 'wait_end_run': True,\n",
+       " 'activate_BeeOND': True,\n",
+       " 'verbose': True}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# RunRules for ismhpc\n",
     "# The product of ntasks_per_node*cpus_per_task is equal to 32. \n",
@@ -58,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +140,7 @@
        " 'verbose': True}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,14 +174,14 @@
     "tags": []
    },
    "source": [
-    "# DFT analysis of the AGSL5"
+    "# DFT analysis of the AGSLn with n=5"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook contains the DFT analysis of the Armchair Graphene SuperLattice with 5 C atoms between each H atom along the Y (armchair) direction performed with QuantumESPRESSO"
+    "This notebook contains the DFT analysis of the Armchair Graphene SuperLattice with 5 C atoms between each line H atom along the Y (armchair) direction performed with QuantumESPRESSO"
    ]
   },
   {
@@ -158,18 +200,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "inp = I.PwInput(file='Input_Vasil/qe_scf.in')\n",
+    "inp = I.PwInput(file='Input_scf/qe_scf.in')\n",
     "atoms = inp['atomic_positions']['values'] # provided in angstrom\n",
     "cell_parameters = inp['cell_parameters']['values'] # provided in angstrom"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +234,7 @@
        " [[7.363588492, 1e-06, 0.0], [1e-09, 4.272655813, 0.0], [0.0, 0.0, 12.0]])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +301,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We use the input file 'Input_Vasil/qe_scf.in' as starting point for the DFT analysis"
+    "We use the input file 'Input_scf/qe_scf.in' as starting point for the DFT analysis"
    ]
   },
   {
@@ -321,9 +363,9 @@
     }
    ],
    "source": [
-    "inp = I.PwInput(file='Input_Vasil/qe_scf.in')\n",
+    "inp = I.PwInput(file='Input_scf/qe_scf.in')\n",
     "inp.set_scf(force_symmorphic=True,conv_thr=1e-7)\n",
-    "inp.set_pseudo_dir('../pseudos')\n",
+    "inp.set_pseudo_dir('../../pseudos')\n",
     "inp.add_atom(atom='C',pseudo_name='C_ONCV_PBE.upf',mass=12.011)\n",
     "inp.add_atom(atom='H',pseudo_name='H_ONCV_PBE.upf',mass=1.0)\n",
     "inp.set_num_bnds(26)\n",
