--- a/n_5/GW_Analysis.ipynb
+++ b/n_5/GW_Analysis.ipynb
@@ -130,7 +130,7 @@
     "tags": []
    },
    "source": [
-    "# GW convergence analysis for AGSL5"
+    "# GW convergence analysis for AGSLn with n=5"
    ]
   },
   {
