--- a/n_5/OPTICS.ipynb
+++ b/n_5/OPTICS.ipynb
@@ -99,7 +99,7 @@
     "tags": []
    },
    "source": [
-    "# Optical absorption of the AGSL5"
+    "# Optical absorption of the AGSLn with n=5"
    ]
   },
   {
