--- a/n_5/DFT_Analysis.ipynb
+++ b/n_5/DFT_Analysis.ipynb
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
        " [[7.363588492, 1e-06, 0.0], [1e-09, 4.272655813, 0.0], [0.0, 0.0, 12.0]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,17 +245,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "lattice = np.array(cell_parameters)\n",
-    "positions = LL.build_lattice(lattice,atoms,3,4,1)"
+    "positions = LL.build_lattice(lattice,atoms,3,4,1) #3,4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
