--- a/n_6/DFT_Analysis.ipynb
+++ b/n_6/DFT_Analysis.ipynb
@@ -1369,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1391,7 +1391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1401,14 +1401,7 @@
       "Run the selection [0] with the parallel task_groups [[0]] \n",
       "\n",
       "Run the task [0] \n",
-      "delete job_out script: DFT_analysis/job_gs_converged_sym.out\n",
-      "delete log file: DFT_analysis/gs_converged_sym.log\n",
-      "delete xml file: /leonardo_work/IscrC_ICE-SURF/AGSLn/n_6/DFT_analysis/gs_converged_sym.xml\n",
-      "delete folder: /leonardo_work/IscrC_ICE-SURF/AGSLn/n_6/DFT_analysis/gs_converged_sym.save\n",
-      "run command: mpirun -np 4 --map-by socket:PE=8 --rank-by core pw.x -inp gs_converged_sym.in > gs_converged_sym.log\n",
-      "slurm submit:  cd DFT_analysis ; sbatch job_gs_converged_sym.sh\n",
-      "computation gs_converged_sym is running...\n",
-      "computation gs_converged_sym ended\n",
+      "Skip the run of gs_converged_sym\n",
       "Task [0] ended \n",
       " \n"
      ]
@@ -1420,7 +1413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1442,7 +1435,7 @@
        " 'position_direct_gap': 0}"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1701,7 +1694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1714,27 +1707,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "nbnds = 800 #500 #35\n",
+    "nbnds = 600 #800 #50\n",
     "inp.set_nscf(nbnds,force_symmorphic=True,conv_thr=1e-6)\n",
     "#inp"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kvalues = [8] #[5,8,12,15] #[10,15,20,25,30]"
+    "kvalues = [5,12] #[5,8,12,15] #[10,15,20,25,30]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1758,105 +1751,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'label': 'Dataset',\n",
-       " 'run_dir': 'DFT_analysis',\n",
-       " 'num_tasks': 4,\n",
-       " 'verbose': True,\n",
-       " 'input': {'control': {'calculation': \"'nscf'\",\n",
-       "   'verbosity': \"'high'\",\n",
-       "   'prefix': \"'kpoints_8x24-nbnds_800'\",\n",
-       "   'outdir': \"'./'\",\n",
-       "   'restart_mode': \"'from_scratch'\",\n",
-       "   'wf_collect': '.true.',\n",
-       "   'pseudo_dir': \"'../../pseudos'\"},\n",
-       "  'system': {'force_symmorphic': '.true.',\n",
-       "   'ibrav': 0,\n",
-       "   'nat': 26,\n",
-       "   'ntyp': 2,\n",
-       "   'nbnd': 800,\n",
-       "   'ecutwfc': 70,\n",
-       "   'occupations': \"'fixed'\",\n",
-       "   'degauss': 0.0,\n",
-       "   'smearing': \"'gaussian'\"},\n",
-       "  'electrons': {'diago_full_acc': '.false.',\n",
-       "   'mixing_beta': 0.7,\n",
-       "   'conv_thr': 1e-06},\n",
-       "  'ions': {},\n",
-       "  'cell': {},\n",
-       "  'atomic_species': {'C': [12.011, 'C_ONCV_PBE.upf'],\n",
-       "   'H': [1.0, 'H_ONCV_PBE.upf']},\n",
-       "  'atomic_positions': {'type': 'angstrom',\n",
-       "   'values': [['C', array([ 6.61593828, -0.69158176,  0.50374868])],\n",
-       "    ['C', array([6.61593828, 0.69158176, 0.50374868])],\n",
-       "    ['C', array([ 5.46707924, -1.41863641,  0.11404256])],\n",
-       "    ['C', array([5.46707924, 1.41863641, 0.11404256])],\n",
-       "    ['C', array([ 4.2837533 , -0.71160658, -0.22376282])],\n",
-       "    ['C', array([ 4.2837533 ,  0.71160658, -0.22376282])],\n",
-       "    ['C', array([ 3.07275185, -1.42558992, -0.47490593])],\n",
-       "    ['C', array([ 3.07275185,  1.42558992, -0.47490593])],\n",
-       "    ['C', array([ 1.84958377, -0.71109182, -0.62757429])],\n",
-       "    ['C', array([ 1.84958377,  0.71109182, -0.62757429])],\n",
-       "    ['C', array([ 0.61819436, -1.4226974 , -0.67633329])],\n",
-       "    ['C', array([ 0.61819436,  1.4226974 , -0.67633329])],\n",
-       "    ['C', array([-0.61371335, -0.71107665, -0.62755765])],\n",
-       "    ['C', array([-0.61371335,  0.71107665, -0.62755765])],\n",
-       "    ['C', array([-1.83660099, -1.42552197, -0.47492222])],\n",
-       "    ['C', array([-1.83660099,  1.42552197, -0.47492222])],\n",
-       "    ['C', array([-3.04755869, -0.71167361, -0.22377695])],\n",
-       "    ['C', array([-3.04755869,  0.71167361, -0.22377695])],\n",
-       "    ['C', array([-4.23118004, -1.41857461,  0.11410659])],\n",
-       "    ['C', array([-4.23118004,  1.41857461,  0.11410659])],\n",
-       "    ['C', array([-5.37969769, -0.69166768,  0.50369832])],\n",
-       "    ['C', array([-5.37969769,  0.69166768,  0.50369832])],\n",
-       "    ['C', array([-6.61600137, -1.36281456,  1.06220987])],\n",
-       "    ['C', array([-6.61600137,  1.36281456,  1.06220987])],\n",
-       "    ['H', array([-6.61597783,  1.05969605,  2.13102909])],\n",
-       "    ['H', array([-6.61597783, -1.05969605,  2.13102909])]]},\n",
-       "  'kpoints': {'type': 'automatic', 'values': ([8, 24, 1], [0.0, 0.0, 0.0])},\n",
-       "  'cell_parameters': {'type': 'angstrom',\n",
-       "   'values': array([[14.46804031,  0.        ,  0.        ],\n",
-       "          [ 0.        ,  4.26869196,  0.        ],\n",
-       "          [ 0.        ,  0.        , 12.        ]])},\n",
-       "  'file': 'Input_scf/qe_scf.in'},\n",
-       " 'source_dir': 'DFT_analysis/gs_converged_sym.save',\n",
-       " 'name': 'kpoints_8x24-nbnds_800'}"
+       "[{'kpoints': '5x15', 'nbnds': 600}, {'kpoints': '12x36', 'nbnds': 600}]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "study.runs[0]"
+    "study.ids"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#study.runs[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Run the selection [0] with the parallel task_groups [[0]] \n",
+      "Run the selection [0, 1] with the parallel task_groups [[0, 1]] \n",
       "\n",
-      "Run the task [0] \n",
-      "copy source_dir DFT_analysis/gs_converged_sym.save in the /leonardo_work/IscrC_ICE-SURF/AGSLn/n_6/DFT_analysis/kpoints_8x24-nbnds_800.save\n",
-      "run command: mpirun -np 4 --map-by socket:PE=8 --rank-by core pw.x -inp kpoints_8x24-nbnds_800.in > kpoints_8x24-nbnds_800.log\n",
-      "slurm submit:  cd DFT_analysis ; sbatch job_kpoints_8x24-nbnds_800.sh\n",
-      "computation kpoints_8x24-nbnds_800 is running...\n",
-      "Submitted batch job 14134334\n",
-      "computation kpoints_8x24-nbnds_800 ended\n",
-      "Task [0] ended \n",
-      " \n"
+      "Run the task [0, 1] \n",
+      "delete folder:delete folder:  /leonardo_work/IscrC_ICE-SURF/AGSLn/n_6/DFT_analysis/kpoints_12x36-nbnds_600.save/leonardo_work/IscrC_ICE-SURF/AGSLn/n_6/DFT_analysis/kpoints_5x15-nbnds_600.save\n",
+      "\n",
+      "copy source_dir DFT_analysis/gs_converged_sym.save in the /leonardo_work/IscrC_ICE-SURF/AGSLn/n_6/DFT_analysis/kpoints_5x15-nbnds_600.savecopy source_dir DFT_analysis/gs_converged_sym.save in the /leonardo_work/IscrC_ICE-SURF/AGSLn/n_6/DFT_analysis/kpoints_12x36-nbnds_600.save\n",
+      "\n",
+      "run command: mpirun -np 4 --map-by socket:PE=8 --rank-by core pw.x -inp kpoints_12x36-nbnds_600.in > kpoints_12x36-nbnds_600.logrun command: mpirun -np 4 --map-by socket:PE=8 --rank-by core pw.x -inp kpoints_5x15-nbnds_600.in > kpoints_5x15-nbnds_600.log\n",
+      "\n",
+      "slurm submit: slurm submit:   cd DFT_analysis ; sbatch job_kpoints_5x15-nbnds_600.shcd DFT_analysis ; sbatch job_kpoints_12x36-nbnds_600.sh\n",
+      "\n",
+      "computation kpoints_12x36-nbnds_600 is running...computation kpoints_5x15-nbnds_600 is running...\n",
+      "\n"
      ]
     }
    ],
@@ -1870,7 +1813,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kp = results[2].kpoints # cartesian coordinates in units of 2\\pi/alat"
+    "kp = results[1].kpoints # cartesian coordinates in units of 2\\pi/alat"
    ]
   },
   {
