--- a/n_5/DFT_Analysis.ipynb
+++ b/n_5/DFT_Analysis.ipynb
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
        " 'verbose': True}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,7 +318,7 @@
        "  'outdir': \"'./'\",\n",
        "  'restart_mode': \"'from_scratch'\",\n",
        "  'wf_collect': '.false.',\n",
-       "  'pseudo_dir': \"'../pseudos'\"},\n",
+       "  'pseudo_dir': \"'../../pseudos'\"},\n",
        " 'system': {'force_symmorphic': '.true.',\n",
        "  'ibrav': 0,\n",
        "  'nat': 14,\n",
@@ -354,7 +354,7 @@
        "  'values': [[7.363588492, 1e-06, 0.0],\n",
        "   [1e-09, 4.272655813, 0.0],\n",
        "   [0.0, 0.0, 12.0]]},\n",
-       " 'file': 'Input_Vasil/qe_scf.in'}"
+       " 'file': 'Input_scf/qe_scf.in'}"
       ]
      },
      "execution_count": 8,
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -440,13 +440,59 @@
        " 'position_direct_gap': 0}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "results[0].get_gap()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.39151655e+01, 1.88972612e-06, 0.00000000e+00],\n",
+       "       [1.88972612e-09, 8.07414931e+00, 0.00000000e+00],\n",
+       "       [0.00000000e+00, 0.00000000e+00, 2.26767135e+01]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results[0].lattice"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.00000248e+00, -2.34047047e-10,  0.00000000e+00],\n",
+       "       [-2.34047047e-07,  1.72342614e+00,  0.00000000e+00],\n",
+       "       [ 0.00000000e+00,  0.00000000e+00,  6.13633894e-01]])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "alat_au = 13.9152 #au\n",
+    "rec_lattice = LL.get_reciprocal_lattice(results[0].lattice,alat,rescale=True)\n",
+    "rec_lattice"
    ]
   },
   {
@@ -470,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,6 +535,46 @@
     "M = [0.5,0.0,0.0]\n",
     "\n",
     "high_sym = {'G':G,'K':K,'M':M,'M2':M2} # useful to label the high-sym point on the path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1.17023524e-07,  8.61713071e-01,  0.00000000e+00])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "LL.convert_to_cartesian(rec_lattice,M2_cryst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.50000112, 0.86171307, 0.        ])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "LL.convert_to_cartesian(rec_lattice,K_cryst)"
    ]
   },
   {
