--- a/n_6/OPTICS.ipynb
+++ b/n_6/OPTICS.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        " 'fatlog': False}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
        " 'abs-ip-yPol-kpoints_12x36']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -253,27 +253,9 @@
       "Run the selection [0, 1, 2] with the parallel task_groups [[0, 1, 2]] \n",
       "\n",
       "Run the task [0, 1, 2] \n",
-      "delete job_out script: MB_analysis/kpoints_5x15-nbnds_600/job_abs-ip-yPol-kpoints_5x15.out\n",
-      "delete folder: MB_analysis/kpoints_5x15-nbnds_600/abs-ip-yPol-kpoints_5x15\n",
-      "delete job_out script: MB_analysis/kpoints_12x36-nbnds_600/job_abs-ip-yPol-kpoints_12x36.out\n",
-      "delete folder: MB_analysis/kpoints_12x36-nbnds_600/abs-ip-yPol-kpoints_12x36\n",
-      "run command: mpirun -np 4 --map-by socket:PE=8 --rank-by core yambo -F abs-ip-yPol-kpoints_5x15.in -J \"abs-ip-yPol-kpoints_5x15,pp-G-kpoints_5x15,ndbs-ngsblkxp_6.0-bndsrnxp_500,ndbs\" -C abs-ip-yPol-kpoints_5x15\n",
-      "slurm submit:  cd MB_analysis/kpoints_5x15-nbnds_600 ; sbatch job_abs-ip-yPol-kpoints_5x15.sh\n",
-      "computation abs-ip-yPol-kpoints_5x15 is running...\n",
-      "run command: mpirun -np 4 --map-by socket:PE=8 --rank-by core yambo -F abs-ip-yPol-kpoints_12x36.in -J \"abs-ip-yPol-kpoints_12x36,pp-G-kpoints_12x36,ndbs-ngsblkxp_6.0-bndsrnxp_500,ndbs\" -C abs-ip-yPol-kpoints_12x36\n",
-      "slurm submit:  cd MB_analysis/kpoints_12x36-nbnds_600 ; sbatch job_abs-ip-yPol-kpoints_12x36.sh\n",
-      "computation abs-ip-yPol-kpoints_12x36 is running...\n",
-      "delete job_out script: MB_analysis/kpoints_8x24-nbnds_800/job_abs-ip-yPol-kpoints_8x24.out\n",
-      "delete folder: MB_analysis/kpoints_8x24-nbnds_800/abs-ip-yPol-kpoints_8x24\n",
-      "run command: mpirun -np 4 --map-by socket:PE=8 --rank-by core yambo -F abs-ip-yPol-kpoints_8x24.in -J \"abs-ip-yPol-kpoints_8x24,pp-G-kpoints_8x24,ndbs-ngsblkxp_6.0-bndsrnxp_500,ndbs\" -C abs-ip-yPol-kpoints_8x24\n",
-      "slurm submit:  cd MB_analysis/kpoints_8x24-nbnds_800 ; sbatch job_abs-ip-yPol-kpoints_8x24.sh\n",
-      "computation abs-ip-yPol-kpoints_8x24 is running...\n",
-      "computation abs-ip-yPol-kpoints_5x15 ended\n",
-      "Run performed in 03s\n",
-      "computation abs-ip-yPol-kpoints_8x24 ended\n",
-      "Run performed in 05s\n",
-      "computation abs-ip-yPol-kpoints_12x36 ended\n",
-      "Run performed in 11s\n",
+      "Skip the run of abs-ip-yPol-kpoints_8x24\n",
+      "Skip the run of abs-ip-yPol-kpoints_5x15\n",
+      "Skip the run of abs-ip-yPol-kpoints_12x36\n",
       "Task [0, 1, 2] ended \n",
       " \n"
      ]
@@ -285,16 +267,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7f75e109f610>"
+       "<matplotlib.legend.Legend at 0x7fcc914f6890>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -320,6 +302,7 @@
     "ax.vlines(gw_gap,-0.5,900,linestyles='-',color='black',linewidth=2)\n",
     "ax.hlines(0,xmin=0,xmax=energy[-1],linestyles='--',color='gray')\n",
     "ax.set_xlim(-0.1,4)\n",
+    "#ax.set_ylim(-5,100)\n",
     "ax.set_ylabel('alpha',size=18)\n",
     "ax.set_xlabel('energy (eV)',size=18)\n",
     "ax.set_title('IP alpha yPol',size=20)\n",
